--- a/DPA_VC3/bin/.gitignore
+++ b/DPA_VC3/bin/.gitignore
@@ -8,3 +8,8 @@
 /adjacency50.txt
 /adjacency15.txt
 /adjacency31.txt
+/adjacency20.txt
+/adjacency30.txt
+/adjacency40.txt
+/adjacencyDense.txt
+/vc3/
